[project]
name = "driveahead"
version = "0.1.0"
description = "A Python MVP inspired by head-crash arena car games."
requires-python = ">=3.11"
dependencies = [
  "pygame>=2.6",
  "pymunk>=6.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
driveahead = "driveahead.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
